--- a/Notebooks/web_scraping.ipynb
+++ b/Notebooks/web_scraping.ipynb
@@ -600,80 +600,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98c59ce9",
+   "id": "24de23c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "movimientos_bien "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d278ad7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selector    #movie_player > a\n",
-    "\n",
-    "path    //*[@id=\"movie_player\"]/a\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "path //*[@id=\"ytPlayer-FRiiZRhapeU\"]\n",
-    "\n",
-    "selector    #ytPlayer-FRiiZRhapeU\n",
-    "\n",
-    "\n",
-    "path //*[@id=\"ytPlayer-Pa4QUC9AvuA\"]\n",
-    "selector    #ytPlayer-Pa4QUC9AvuA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27726156",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "//*[@id=\"main\"]/div[1]/div\n",
-    "//*[@id=\"main\"]/div[1]/div"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee2b5466",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#movie_player > a\n",
-    "#movie_player > a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e76e712",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#movie_player > div.html5-video-container > video"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5dbad72c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#main > div._wrapper_1aue2_17._full-width_1aue2_29 > div\n",
-    "#main > div._wrapper_1aue2_17._full-width_1aue2_29 > div\n",
-    "#main > div._wrapper_1aue2_17._full-width_1aue2_29 > div"
+    "lista_nueva = []\n",
+    "for elemento in movimientos:\n",
+    "    for key,value in elemento.items(): \n",
+    "        url = elemento[key] #para acceder al value, llamo a la key de cada diccionario de mi lista de diccionario(movimientos)\n",
+    "        html=requests.get(url) #coger la url de cada uno de los values que he llamado a través de su key\n",
+    "        soup=BeautifulSoup(html.content, \"html.parser\")\n",
+    "        enlaces = soup.select(\"iframe\")[0]\n",
+    "        elemento[key] = enlaces #creo un nuevo par de diccionario, con la key de cada diccionario de movimientos\n",
+    "        lista_nueva.append(elemento)"
    ]
   },
   {
