--- a/Notebooks/coordenadas geopy.ipynb
+++ b/Notebooks/coordenadas geopy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "32e5db5b",
+   "id": "e313b757",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c77f19e5",
+   "id": "97be22d7",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "70c5960d",
+   "id": "f6fb05f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6bfde2a",
+   "id": "c1f2c308",
    "metadata": {},
    "outputs": [
     {
@@ -534,6 +534,270 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "85a9e9d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_box = gc.cleaning_box(\"calle Campomanes, 10, Madrid\",10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bcbba03d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Dirección</th>\n",
+       "      <th>Latitud</th>\n",
+       "      <th>Longitud</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CrossFit db</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>C. de los Dos Amigos, 3, Madrid</td>\n",
+       "      <td>40.424697</td>\n",
+       "      <td>-3.710056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CROSSFIT 28004</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>Calle de la Luna, 2 Local sótano 1, Madrid</td>\n",
+       "      <td>40.421306</td>\n",
+       "      <td>-3.704760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wezone CrossFit Chamberí</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>C. de Vallehermoso, 27, Madrid</td>\n",
+       "      <td>40.432552</td>\n",
+       "      <td>-3.709147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Crossfit Maherit Rio</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>C. de Aniceto Marinas, 26, Madrid</td>\n",
+       "      <td>40.422036</td>\n",
+       "      <td>-3.722746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Box db Madrid</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>C. de las Negras, 8, Madrid</td>\n",
+       "      <td>40.426577</td>\n",
+       "      <td>-3.712261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>555 CrossFit</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>C. de Guzmán el Bueno, 36, Madrid</td>\n",
+       "      <td>40.434519</td>\n",
+       "      <td>-3.713055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Wild River CrossFit</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>P.º de la Ermita del Santo, 16, Local 1, Madrid</td>\n",
+       "      <td>40.411280</td>\n",
+       "      <td>-3.723436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>UrbanBox CrossFit</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>C. de Martín de Vargas, 22, Madrid</td>\n",
+       "      <td>40.402717</td>\n",
+       "      <td>-3.701975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Shaka Crossfit</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>P.º de los Melancólicos, 11, Madrid</td>\n",
+       "      <td>40.409147</td>\n",
+       "      <td>-3.718687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CHARRÚA CROSSFIT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>C. de Barrafon, 7, Madrid</td>\n",
+       "      <td>40.411482</td>\n",
+       "      <td>-3.730983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>CrossFit V8</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>C. Guindos, 3, Madrid</td>\n",
+       "      <td>40.466580</td>\n",
+       "      <td>-3.699902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CrossFit 4K</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>C. Navarra, 30, Madrid</td>\n",
+       "      <td>40.453804</td>\n",
+       "      <td>-3.705595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Cross Fit Country House - Fitness - Crossfit -...</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>C. Marquesa de Argüeso, 30, Madrid</td>\n",
+       "      <td>40.391164</td>\n",
+       "      <td>-3.724094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CrossFit La Dehesa - Caos Madrid</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>P.º de la Dirección, 19, Madrid</td>\n",
+       "      <td>40.458179</td>\n",
+       "      <td>-3.708944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>CrossFit Carabanchel</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>C. José Cabrera, 15, Madrid</td>\n",
+       "      <td>40.373843</td>\n",
+       "      <td>-3.758307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>CrossFit Anteus</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>C. de la Isla de Arosa, 27, Madrid</td>\n",
+       "      <td>40.480172</td>\n",
+       "      <td>-3.716293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>CrossFit TETUÁN</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>Calle del Gral. Margallo, 4, Madrid</td>\n",
+       "      <td>40.461010</td>\n",
+       "      <td>-3.697456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>CrossFit Montecarmelo</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>Calle Avenida de Santuario de Valverde, 2, Mon...</td>\n",
+       "      <td>40.504312</td>\n",
+       "      <td>-3.708643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>CrossFit Bernabeu</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>C. del Aviador Zorita, 46, Madrid</td>\n",
+       "      <td>40.451591</td>\n",
+       "      <td>-3.697992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>CrossFit Pozuelo</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>C. del Grupo Escolar, 6, Pozuelo de Alarcón</td>\n",
+       "      <td>40.448934</td>\n",
+       "      <td>-3.800056</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Name  Rating  \\\n",
+       "0                                         CrossFit db     4.9   \n",
+       "1                                      CROSSFIT 28004     4.2   \n",
+       "2                            Wezone CrossFit Chamberí     4.6   \n",
+       "3                                Crossfit Maherit Rio     4.8   \n",
+       "4                                       Box db Madrid     4.8   \n",
+       "5                                        555 CrossFit     3.7   \n",
+       "6                                 Wild River CrossFit     4.8   \n",
+       "7                                   UrbanBox CrossFit     4.6   \n",
+       "8                                      Shaka Crossfit     4.9   \n",
+       "9                                    CHARRÚA CROSSFIT     0.0   \n",
+       "10                                        CrossFit V8     4.8   \n",
+       "11                                        CrossFit 4K     5.0   \n",
+       "12  Cross Fit Country House - Fitness - Crossfit -...     4.9   \n",
+       "13                   CrossFit La Dehesa - Caos Madrid     5.0   \n",
+       "14                               CrossFit Carabanchel     4.7   \n",
+       "15                                    CrossFit Anteus     4.7   \n",
+       "16                                    CrossFit TETUÁN     4.9   \n",
+       "17                              CrossFit Montecarmelo     4.9   \n",
+       "18                                  CrossFit Bernabeu     5.0   \n",
+       "19                                   CrossFit Pozuelo     4.9   \n",
+       "\n",
+       "                                            Dirección    Latitud  Longitud  \n",
+       "0                     C. de los Dos Amigos, 3, Madrid  40.424697 -3.710056  \n",
+       "1          Calle de la Luna, 2 Local sótano 1, Madrid  40.421306 -3.704760  \n",
+       "2                      C. de Vallehermoso, 27, Madrid  40.432552 -3.709147  \n",
+       "3                   C. de Aniceto Marinas, 26, Madrid  40.422036 -3.722746  \n",
+       "4                         C. de las Negras, 8, Madrid  40.426577 -3.712261  \n",
+       "5                   C. de Guzmán el Bueno, 36, Madrid  40.434519 -3.713055  \n",
+       "6     P.º de la Ermita del Santo, 16, Local 1, Madrid  40.411280 -3.723436  \n",
+       "7                  C. de Martín de Vargas, 22, Madrid  40.402717 -3.701975  \n",
+       "8                 P.º de los Melancólicos, 11, Madrid  40.409147 -3.718687  \n",
+       "9                           C. de Barrafon, 7, Madrid  40.411482 -3.730983  \n",
+       "10                              C. Guindos, 3, Madrid  40.466580 -3.699902  \n",
+       "11                             C. Navarra, 30, Madrid  40.453804 -3.705595  \n",
+       "12                 C. Marquesa de Argüeso, 30, Madrid  40.391164 -3.724094  \n",
+       "13                    P.º de la Dirección, 19, Madrid  40.458179 -3.708944  \n",
+       "14                        C. José Cabrera, 15, Madrid  40.373843 -3.758307  \n",
+       "15                 C. de la Isla de Arosa, 27, Madrid  40.480172 -3.716293  \n",
+       "16                Calle del Gral. Margallo, 4, Madrid  40.461010 -3.697456  \n",
+       "17  Calle Avenida de Santuario de Valverde, 2, Mon...  40.504312 -3.708643  \n",
+       "18                  C. del Aviador Zorita, 46, Madrid  40.451591 -3.697992  \n",
+       "19        C. del Grupo Escolar, 6, Pozuelo de Alarcón  40.448934 -3.800056  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_box"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "a69c72ca",
    "metadata": {},
@@ -574,14 +838,6 @@
    "source": [
     "location"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f34b8ae3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
