--- a/Notebooks/web_scraping-videos.ipynb
+++ b/Notebooks/web_scraping-videos.ipynb
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "79bd512e",
+   "id": "18374450",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "afc7c4e1",
+   "id": "582e43ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a7fe5eb2",
+   "id": "be6a45ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e559544e",
+   "id": "1d04fed1",
    "metadata": {},
    "outputs": [
     {
@@ -649,6 +649,16 @@
    ],
    "source": [
     "yaestaria.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1d5583d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yaestaria.to_csv(\"../data/movimientos_video.csv\")"
    ]
   },
   {
