--- a/Notebooks/web_scraping-videos.ipynb
+++ b/Notebooks/web_scraping-videos.ipynb
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "18374450",
+   "id": "12e6787d",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "582e43ab",
+   "id": "65d4c2eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "be6a45ea",
+   "id": "6a56143c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1d04fed1",
+   "id": "0dac3355",
    "metadata": {},
    "outputs": [
     {
@@ -654,11 +654,42 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1d5583d2",
+   "id": "03999b46",
    "metadata": {},
    "outputs": [],
    "source": [
     "yaestaria.to_csv(\"../data/movimientos_video.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "84444fe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = yaestaria[yaestaria[\"name\"] == \"The Legless Rope climb\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "944c7858",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(h[\"iframe\"].values[0])"
    ]
   },
   {
