--- a/Notebooks/coordenadas geopy.ipynb
+++ b/Notebooks/coordenadas geopy.ipynb
@@ -802,6 +802,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "5944c99f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_box_dire = df_box.drop([\"Latitud\",\"Longitud\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "a1892a5f",
    "metadata": {},
@@ -880,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40538e84",
+   "id": "627bb924",
    "metadata": {},
    "outputs": [],
    "source": []
